@@ -3,6 +3,8 @@ Version: 2.3.4
 Date: ????
   Changes:
     - restore the behavior that the virtual signals for the lamp color are only present on the green wire. Add documentation.
+  Bugfixes:
+    - fuel station lamp switched to blue when train parked, then back to cyan when train leaves
 ---------------------------------------------------------------------------------------------------
 Version: 2.3.3
 Date: 2025-05-09
